--- a/pam2/2025-08-04.md
+++ b/pam2/2025-08-04.md
@@ -36,8 +36,26 @@
 
 **package.json** -> certidão de nascimento do app. contém lista de dependências e versões, nome, comandos, e outras infos
 
+#### desenho
 
+```
+                     app/react     request           nuvem
+3 pessoinhas   -->   logo react    -->    chip api   raio
+               <--                 <--               banco de dados
+                                   response
+```
 
+api, camada de aplicação que disponibiliza uma interface de comunicação padronizada para outros sistemas.
 
+```javascript
+const [value, setvalue] = usestate(value);
+
+useeffect(() =>
+{
+    /// efeito colateral
+}, [monitor]);
+```
+
+usestate manipula o estado da aplicação e useeffect é engatilhado quando o estado muda
 
 
