detalhe de ponto e vírgula 04/08/2025

--- a/pam2/2025-08-04.md
+++ b/pam2/2025-08-04.md
@@ -56,6 +56,6 @@ useeffect(() =>
 }, [monitor]);
 ```
 
-usestate manipula o estado da aplicação e useeffect é engatilhado quando o estado muda
+usestate manipula o estado da aplicação e useeffect é engatilhado quando o estado muda;
 
 
