--- a/pam2/2025-08-04.md
+++ b/pam2/2025-08-04.md
@@ -50,12 +50,47 @@ api, camada de aplicação que disponibiliza uma interface de comunicação padr
 ```javascript
 const [value, setvalue] = usestate(value);
 
-useeffect(() =>
-{
+useeffect(() => {
     /// efeito colateral
 }, [monitor]);
 ```
 
 usestate manipula o estado da aplicação e useeffect é engatilhado quando o estado muda;
 
+```javascript
+let {nome, idade, alura} = {nome: 'elias', idade: 25, altura: 1.69};
 
+let [one, two] = [1, 2];
+```
+
+##
+
+```javascript
+function f() {
+    return [2, 3, 4];
+}
+
+var [a, b, c] = f();
+```
+
+```javascript
+let {nome, idade, {rg, cpf}} = {nome: 'elias', idade: 25, documento: {rg: 12, cpf: 34}};
+```
+
+    control
+    ^       _|  _^
+    |      v  _|
+m   v   c   <- 
+|       |
+v       v
+model   view
+     -->
+     <--
+
+```
+class produo extends model
+class custo extends model
+class model {
+    public function serve() {}
+}
+```
