outra parte aula 07/08/2025

--- a/ssi/aula-07-08-2025.md
+++ b/ssi/aula-07-08-2025.md
@@ -23,3 +23,15 @@ cidades
 reti locali
 
 ambientes
+
+# barramento-bus
+
+```
+servidor    estação-1    estação-2    (computadores)
+|           | bnc        |
+V coaxial   V            V T
+====================================  terminador <--> terminador
+^            ^ T          ^
+|            |            | bnc
+estação-3    estação-4    impressora
+```
