--- a/ssi/aula-07-08-2025.md
+++ b/ssi/aula-07-08-2025.md
@@ -35,3 +35,5 @@ V coaxial   V            V T
 |            |            | bnc
 estação-3    estação-4    impressora
 ```
+
+![topologia coaxial](https://secbitrez.wordpress.com/wp-content/uploads/2018/10/barramento.png?w=840)
