--- a/ds2/pesquisa-08-08-2025.md
+++ b/ds2/pesquisa-08-08-2025.md
@@ -2,3 +2,5 @@
 
 - o que é composer? pra quê serve? exemplifique como instalar uma biblioteca e como remover.
 - leia o artigo s.o.l.i.d e pesquise sobre o que são recursos abstratos no php com interface, trait e abstract class.
+
+para o dia 15/08 às 23h59 via email prof.ardosobral@gmail.com
