--- a/pam2/aula-25-08-2025.md
+++ b/pam2/aula-25-08-2025.md
@@ -11,3 +11,16 @@
 **arquitetura:**
 
 <img width="1152" height="712" alt="image" src="https://github.com/user-attachments/assets/7dc833c6-70c4-48f6-bb46-4382606bbe10">
+
+base de pastas
+
+```
+my-app/
+└ app/
+  └ (auth)/ ---> autenticação
+  | └ login.tsx
+  └ (app)/ ---> público
+  | └ _layout.tsx
+  | └ index.tsx
+  └ _layout.tsx
+```
