--- a/pam2/aula-29-09-2025.md
+++ b/pam2/aula-29-09-2025.md
@@ -1,3 +1,9 @@
 ### atividade para senso crítico
 
-desenhar um aplicativo, fazer uma permuta, avaliar e desenhar novamente
+-->  desenhar um aplicativo, fazer uma permuta, avaliar e desenhar novamente
+
+**1ª rodada:** desenhar um app do jeito que vocês acham que eles deveriam ser.
+
+**2ª rodada:** desenhar um app com base nos questionamentos do outros grupos.
+
+**3ª rodada:** desenhar um app com base em pesquisas de usabilidade e funcionalidades.
